# rythmotron

./: .gitignore  .pre-commit-config.yaml  ARythm-EMU-2050-Knob-UI.tsx  CONTRIBUTING.md  Drumsynth Panel_components.md  README.md  TRANSITION_PLAN.md  audio_engine.py  channelstrip.module.css  constants.py  display.md  drumsynthese.md  gradient.md  graphiclevup.md  index.html  launch_rythmotron.sh  layout_manager.py  main.py  main_window.py  mixerstruktur.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.sh  rythmotron_app.py  rytm_gui.py  setup.py  setup.sh  start.sh  style.py  sugg.md  temp_activate.sh  test_display.py  vite.config.ts
.github/workflows/: python-ci.yml
backup/: __init__.py
backup/controls/: pad_components.py
controls/: __init__.py  button_components.py  knob_components.py
data/: README.md
docs/: README.md  rytm_gui_copilot_prompts.md
logs/: README.md
scripts/: README.md  dev_setup.sh  start.sh
sections/: display_section.py  modes_section.py  pads_section.py  parameters_section.py  sequencer_section.py  top_section.py
src/: SimplifiedSynthDemo.tsx  TestApp.tsx  index.css  main.tsx
src/components/: AudioMIDITestButton.tsx  AudioMIDITestModal.tsx  AudioMIDITestPage.tsx  CallToActionSection.tsx  ChannelStrip.tsx  DrumSynth.tsx  DrumSynthPanel.tsx  EffectPanel.tsx  EffectsTab.tsx  EnvelopeControls.tsx  FeatureCard.tsx  FeaturesSection.tsx  FilterPanel.tsx  Footer.tsx  (+16 more)
tests/: __init__.py  conftest.py  test_audio_engine.py  test_rytm_gui.py
web/: check-env.js  package.json  start-dev.bat  tailwind.config.js
(+97 files in other folders)
