[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rythmotron"
version = "0.1.0"
description = "A software emulator inspired by the Elektron Analog Rytm drum machine"
authors = [
    {name = "Nico Kuehn", email = "nico.kuehn@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "PySide6",
    "numpy",
    "librosa",
    "sounddevice",
    "soundfile",
    "scipy",
    "matplotlib",
]

[project.scripts]
rythmotron = "rythmotron.main:main"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false